--- a/java/pom.xml
+++ b/java/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.googlecode.libphonenumber</groupId>
   <artifactId>libphonenumber-parent</artifactId>
-  <version>8.12.41</version>
+  <version>8.12.41-sgfix</version>
   <packaging>pom</packaging>
   <url>https://github.com/google/libphonenumber/</url>
 
@@ -29,6 +29,14 @@
       <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
     </license>
   </licenses>
+
+  <distributionManagement>
+        <repository>
+            <id>web-maven</id>
+            <name>Web Maven</name>
+            <url>file:///var/www/maven</url>
+        </repository>
+    </distributionManagement>
 
   <scm>
     <connection>scm:git:https://github.com/google/libphonenumber.git</connection>
